<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mythology-App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="apollo_btn">Apollo</string>
    <string name="back_btn">Back</string>
    <string name="romanbtn">Roman</string>
    <string name="go_back_to_roman">Back</string>
    <string name="this_is_the_roman_tab_text">This is the Roman Tab</string>
    <string name="apollo">Apollo</string>
    <string name="story_for_apollo">This is text teaches the story of Apollo</string>
    <string name="bacchus">Bacchus</string>
    <string name="bacchus_story_text">This teaches the history of Bacchus</string>
    <string name="goBack">Back</string>
    <string name="apollo_story_text">This teaches the history of Apollo</string>
    <string name="janus">Janus</string>
    <string name="janus_story_text">This teaches the history of Janus</string>
    <string name="back_to_roman">Back</string>
    <string name="vulcan">Vulcan</string>
    <string name="vulcan_story_text">This teaches the history of Vulcan</string>
    <string name="backToRoman">Back</string>
    <string name="goBackToRoman">Back</string>
    <string name="cupid_story_text">This teaches the history of Cupid</string>
    <string name="ceres">Ceres</string>
    <string name="gobacktoroman">Back</string>
    <string name="ceres_story_text">This teaches the history of Ceres</string>
    <string name="mercury">Mercury</string>
    <string name="mercury_text_story">This teaches the history of Mercury</string>
    <string name="backtoroman">Back</string>
    <string name="terra">Terra</string>
    <string name="terra_story_text">This teaches the history of Terra</string>
    <string name="backroman">Back</string>
    <string name="diana">Diana</string>
    <string name="gotoroman">Back</string>
    <string name="diana_story_text">This teaches the history of Diana</string>
    <string name="jupiter">Jupiter</string>
    <string name="romanbackto">Back</string>
    <string name="jupiter_story_text">This teaches the history of Jupiter</string>
    <string name="greek">Greek</string>
    <string name="backToMain">Back</string>
    <string name="egyptian">Egyptian</string>
    <string name="backtomain">Back</string>
    <string name="gobacktomain">Back</string>
    <string name="norse">Norse</string>
    <string name="ra">Ra</string>
    <string name="backtoegypt">Back</string>
    <string name="ra_story_text">This teaches the history of Ra</string>
    <string name="anubis">Anubis</string>
    <string name="goBackToEgypt">Back</string>
    <string name="anubis_story_text">This teaches the history of Anubis</string>
    <string name="isis">Isis</string>
    <string name="isis_story_text">This teaches the history of Isis</string>
    <string name="gobacktoegypt">Back</string>
    <string name="set">Set</string>
    <string name="set_story_text">This teaches the history of Set</string>
    <string name="Gobacktoegypt">Back</string>
    <string name="thoth">Thoth</string>
    <string name="gobacktoegyptian">Back</string>
    <string name="thoth_story_text">This teaches the history of Thoth</string>
    <string name="osiris">Osiris</string>
    <string name="osiris_story_text">This teaches the history of Osiris</string>
    <string name="backtoegpytian">Back</string>
    <string name="anhur">Anhur</string>
    <string name="egpytiangobackto">Back</string>
    <string name="anhur_story_text">This teaches the history of Anhur</string>
    <string name="horus">Horus</string>
    <string name="backtoegyptian">Back</string>
    <string name="horus_story_text">This teaches the history of Horus</string>
    <string name="geb">Geb</string>
    <string name="egpytgobackto">Back</string>
    <string name="geb_story_text">This teaches the history of Geb</string>

</resources>
