<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="goBack"
        android:text="@string/backtomain"
        android:textSize="12sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goRa"
        android:text="@string/ra"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goAnubis"
        android:text="@string/anubis"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goIsis"
        android:text="@string/isis"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goSet"
        android:text="@string/set"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goThoth"
        android:text="@string/thoth"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goOsiris"
        android:text="@string/osiris"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goAnhur"
        android:text="@string/anhur"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goHorus"
        android:text="@string/horus"
        android:textSize="18sp" />

    <Button
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:onClick="goGeb"
        android:text="@string/geb"
        android:textSize="18sp" />


</LinearLayout>
